refactor: Implement a CSS design system with variables, enhance SEO and accessibility, and optimize image assets to AVIF format.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/src/assets/icono.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- SEO -->
+    <title>Asier Muñoz | Software Engineer Portfolio</title>
+    <meta name="description" content="Portafolio personal de Asier Muñoz — Ingeniero de Software especializado en desarrollo web, inteligencia artificial y soluciones digitales innovadoras." />
+    <meta name="author" content="Asier Muñoz" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Asier Muñoz | Software Engineer Portfolio" />
+    <meta property="og:description" content="Ingeniero de Software especializado en desarrollo web, inteligencia artificial y soluciones digitales innovadoras." />
+    <meta property="og:locale" content="es_ES" />
+
+    <link rel="icon" href="/icono.png" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>personal-portfolio</title>
   </head>
   <body>
     <div id="root"></div>
